# rdsmon

./: .coveragerc  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: test_and_coverage.yml
docs/: index.md
rdsmon/: client.py  commandline.py  configuration.py  const.py  main.py
scripts/: dependencies.py
search/: search_index.json
tests/: test_client.py
