[tool.poetry]
name = "rdsmon"
version = "0.1.0"
description = "python CLI for monitoring metrics of amazon RDS instances"
authors = ["symonk <jackofspaces@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.28.53"
loguru = "^0.7.2"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
tox = "^4.11.3"
pre-commit = "^3.4.0"
coverage = "^7.3.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.1"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.0"
codecov = "^2.1.13"
towncrier = "^23.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:RequestsDependencyWarning:"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'True'
ensure_newline_before_comments = 'True'
line_length = 120
force_single_line = 'True'
known_first_party = 'rdsmon'
default_section = 'THIRDPARTY'
forced_separate = 'tests'
skip = '.tox,.eggs,ci/templates'

[tool.mypy]
mypy_path = '/rdsmon'
check_untyped_defs = 'True'
disallow_any_generics = 'True'
ignore_missing_imports = 'False'
show_error_codes = 'True'
strict_equality = 'True'
warn_redundant_casts = 'True'
warn_return_any = 'False'
warn_unreachable = 'True'
warn_unused_configs = 'True'
no_implicit_reexport = 'False'
ignore_errors = 'False'

[tool.black]
target-version = ['py310']
line-length = 120

[tool.flake8]
# flake8 does not currently support pyproject.toml (handle via pre-commit directly).

[tool.pylint]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = """
    missing-module-docstring
"""

[tool.towncrier]
directory = "changlog"
filename = "CHANGELOG.rst"
version = "21.9.0"
name = "rdsmon"
underlines = "=-~"
all_bullets = true